--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Parallax Scrolling First</title>
 </head>
 
-<body>
+<body onmousedown="return false" onselectstart="return false">
     <header id="header">
         <a href="#" class="logo"> LET'S | Adventure </a>
 
